--- a/FcuCore.Web/bundleconfig.json
+++ b/FcuCore.Web/bundleconfig.json
@@ -9,6 +9,8 @@
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/TinyPubSub.js",
+      "wwwroot/js/ko-bitmask.js",
+      "wwwroot/js/ko-number.js",
       "wwwroot/js/cbusCore.js",
       "wwwroot/js/cbusModules.js",
       "wwwroot/js/modules/*.js",
