basic saving/loading of data, learning events

--- a/FcuCore.Web/appsettings.json
+++ b/FcuCore.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Fcu": {
+    "FilePath": "c:\\temp\\testLayout.txt" 
+  } 
 }
