switch to entirely js based save/load

--- a/FcuCore.Web/appsettings.json
+++ b/FcuCore.Web/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Fcu": {
-    "FilePath": "c:\\temp\\testLayout.txt" 
-  } 
+  "AllowedHosts": "*"
 }
